# Real-Time-Subtitler

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_and_run.ps1  build_and_run.sh  build_and_test.ps1  build_and_test.sh  config.ini  config.ini.example  plan.md  rebuild.sh  to-do.txt
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: cppcheck.yml  lint.yml  release.yaml
include/: appEvents.h  audioCapture.h  configManager.h  controlPanel.h  loadConfig.h  modelManager.h  textTexture.h  trayManager.h  utils.h  version.h.in  whisperEngine.h  windowManager.h
models/: download-model.cmd  download-model.sh
src/: audioCapture.c  audioCapture.h  configManager.c  controlPanel.c  imgui_impl_sdlrenderer3_c.cpp  loadConfig.c  loadConfig.h  main.c  modelManager.c  resources.rc  textTexture.c  textTexture.h  transparentWindow.c  trayManager.c  trayManager.h  utils.c  whisperEngine.c  windowManager.c
